syntax = "proto3";

package grpc;

service VeloNode {
    rpc SubmitVeloTx (VeloTxRequest) returns (VeloTxReply) {
    }
    rpc GetExchangeRate (GetExchangeRateRequest) returns (GetExchangeRateReply) {
    }
    rpc GetCollateralHealthCheck (GetCollateralHealthCheckRequest) returns (GetCollateralHealthCheckReply) {
    }
}

message VeloTxRequest {
    string signedVeloTxXdr = 1;
}

message VeloTxReply {
    string signedStellarTxXdr = 1;
    string message = 2;

    WhitelistOpResponse whitelistOpResponse = 3;
    SetupCreditOpResponse setupCreditOpResponse = 4;
    PriceUpdateOpResponse priceUpdateOpResponse = 5;
    MintCreditOpResponse mintCreditOpResponse = 6;
    RedeemCreditOpResponse redeemCreditOpResponse = 7;
    RebalanceReserveOpResponse rebalanceReserveOpResponse = 8;
}

message WhitelistOpResponse {
    string address = 1;
    string role = 2;
    string currency = 3;
    string trustedPartnerMetaAddress = 4;
}

message SetupCreditOpResponse {
    string assetIssuer = 1;
    string assetDistributor = 2;
    string assetCode = 3;
    string peggedValue = 4;
    string peggedCurrency = 5;
}

message PriceUpdateOpResponse {
    string Asset = 1;
    string Currency = 2;
    string PriceInCurrencyPerAssetUnit = 3;
}

message MintCreditOpResponse {
    string assetAmountToBeIssued = 1;
    string assetCodeToBeIssued = 2;
    string collateralAmount = 3;
    string collateralAssetCode = 4;
}

message RedeemCreditOpResponse {
    // TODO: add parameters
}

message RebalanceReserveOpResponse {
    // TODO: add parameters
}

message GetExchangeRateRequest {
    string assetCode = 1;
    string issuer = 2;
}

message GetExchangeRateReply {
    string assetCode = 1;
    string issuer = 2;
    string redeemableCollateral = 3;
    string redeemablePricePerUnit = 4;
}

message GetCollateralHealthCheckRequest {
}

message GetCollateralHealthCheckReply {
    string assetCode = 1;
    string assetIssuer = 2;
    string requiredAmount = 3;
    string poolAmount = 4;
}
