package grpc

import (
	"context"
	"fmt"
	spec "github.com/velo-protocol/DRSv1/grpc"
	"github.com/velo-protocol/DRSv1/libs/txnbuild"
	"github.com/velo-protocol/DRSv1/node/app/constants"
	"github.com/velo-protocol/DRSv1/node/app/errors"
)

func (handler *handler) handleRedeemCreditOperation(ctx context.Context, veloTx *vtxnbuild.VeloTx) (*spec.VeloTxReply, error) {
	op := veloTx.TxEnvelope().VeloTx.VeloOp.Body.RedeemCreditOp
	if op == nil {
		return nil, nerrors.ErrInvalidArgument{
			Message: fmt.Sprintf(constants.ErrFormatMissingOperation, constants.VeloOpRedeemCredit),
		}.GRPCError()
	}

	redeemCreditOutput, err := handler.UseCase.RedeemCredit(ctx, veloTx)
	if err != nil {
		return nil, err.GRPCError()
	}

	return &spec.VeloTxReply{
		SignedStellarTxXdr: redeemCreditOutput.SignedStellarTxXdr,
		Message:            constants.ReplyRedeemCreditSuccess,
		RedeemCreditOpResponse: &spec.RedeemCreditOpResponse{
			AssetCodeToBeRedeemed:   redeemCreditOutput.AssetCodeToBeRedeemed,
			AssetIssuerToBeRedeemed: redeemCreditOutput.AssetIssuerToBeRedeemed,
			AssetAmountToBeRedeemed: redeemCreditOutput.AssetAmountToBeRedeemed.StringFixed(7),
			CollateralCode:          redeemCreditOutput.CollateralCode,
			CollateralIssuer:        redeemCreditOutput.CollateralIssuer,
			CollateralAmount:        redeemCreditOutput.CollateralAmount.StringFixed(7),
		},
	}, nil
}
